corrected UserImpl write doc so far..
